# trading-platform

./: .gitignore  CMakeLists.txt  README.md  main.cpp  trader.sh
Bitfinex/: Client.cpp  Client.h  ENUMS.cpp  ENUMS.h  Forward.h  OrderBook.cpp  OrderBook.h  Positions.cpp  Positions.h
